# DIHT

./: meeting_maker.cpp  razbieniya.cpp
1 term/: further_node.cpp  hash.cpp
1 term/1st contest/: 1_4.cpp  2_4.cpp  3_1.cpp  4_1.cpp
1 term/2nd contest/: 2_3.cpp  3.cpp  5_4.cpp  sorting.cc
1 term/3rd contest/: 1_3.cpp  2_1.cpp  3_1.cpp
1 term/3rd contest/Huffman tree/: HuffmanTree.h  bitio.h  heap.h  main.cpp
1 term/4th contest/: 1.cpp  2_2.cpp  3_1.cpp  4_1.cpp
2 term/Algorithms/Graphs/: A.cpp  C.cpp
2 term/OOP/: biginteger.h  geometry.h
2 term/Practice of Python/: Python contest 1.rar  Python contest 2.rar  Python contest 3.rar  Python contest 4.rar  Python contest 5.rar
2 term/Technologies of programming/task1/: run.sh
2 term/Technologies of programming/task2/: CMakeLists.txt
2 term/Technologies of programming/task2/A/: index.h  preparing.py
2 term/Technologies of programming/task2/B/: CMakeLists.txt  lib.h
2 term/Technologies of programming/task2/C/: TestConst.h  main.cpp  main_test.cpp
2 term/Technologies of programming/task3/: CMakeLists.txt
3 term/Algorithms/1st contest/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp
3 term/Algorithms/2nd contest/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
3 term/Algorithms/3rd contest/: C.cpp
3 term/CAOS/Week 1/: task  task0.c  task1.c  task2.c  task3.c  task4.c  task4_v2.c
3 term/CAOS/Week 2/: task0.S  task1.S  task1_test.c  task2.S  task2_test.c
3 term/CAOS/Week 3/: task0.S
Coursera/Phystech&Yandex/Линейная алгебра сходство текстов и аппроксимация функций/: notebook.ipynb
TicTacToe/: main.cpp
(+25 files in other folders)
